# machine-learning-toolbox

./: .gitignore  README.md  mnist_example.nb
MachineLearningToolbox/: CMakeLists.txt
MachineLearningToolbox/include/: multiLayerPerceptron.h  perceptron.h  perceptronMultiLayer.h  plugin.h  utils.h
MachineLearningToolbox/src/: multiLayerPerceptron.cpp  perceptron.cpp  perceptronMultiLayer.cpp  plugin.cpp  test.cpp  utils.cpp
MachineLearningToolboxCSharp/: MachineLearningToolboxCSharp.sln
MachineLearningToolboxCSharp/MachineLearningToolboxCSharp/: MachineLearningToolbox.cs  MachineLearningToolboxCSharp.csproj
MachineLearningToolboxCSharp/MachineLearningToolboxCSharp/Properties/: AssemblyInfo.cs
MachineLearningUnity/: Assembly-CSharp.csproj  MachineLearningUnity.CSharp.csproj  MachineLearningUnity.sln
MachineLearningUnity/Assets/: CubeWhoChangeColor.unity  Interactive.cs  LinearClasificationLPA.unity  LinearClassification.unity  LinearClassificationInteractive.unity  LinearClassificationLPA.cs  LinearClassificationMulitLayer - Copie.unity  LinearClassificationMulitLayer.unity  LinearClassificationMultiLayer.cs  MyCube.cs  Perceptron.cs  PerceptronMultiLayer.cs
MachineLearningUnity/Assets/Materials/: Blue.mat  Red.mat
MachineLearningUnity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
